Caldav: https://github.com/mguessan/davmail/issues/419 implement getCalendarEmail to rely on calendar mailbox address instead of connected user email on shared calendars
git-svn-id: https://svn.code.sf.net/p/davmail/code/trunk@3877 3d1905a2-6b24-0410-a738-b14d5a86fcbd